@@ -314,6 +314,11 @@
                     <dependencies>
                     </dependencies>
                 </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
@@ -334,16 +339,57 @@
                             <source>11</source>
                             <target>11</target>
                             <compilerArgs combine.children="append">
-                                <!--下面两个仅影响javac编译器,对于java11+是必须的-->
                                 <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
                                 <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>java17</id>
+            <activation>
+                <jdk>17</jdk>
+            </activation>
 
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-compiler-plugin</artifactId>
+                        <configuration>
+                            <source>17</source>
+                            <target>17</target>
+                            <compilerArgs combine.children="append">
+                                <arg>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</arg>
+                                <arg>--add-exports=java.base/jdk.internal.ref=ALL-UNNAMED</arg>
+                            </compilerArgs>
+                        </configuration>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <argLine>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+                                --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+                                --add-opens=java.base/jdk.internal.loader=ALL-UNNAMED
+                                --add-opens=java.base/java.nio=ALL-UNNAMED</argLine>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <reporting>
